option optimize_for = SPEED;
option java_package = "steam.messages.clientserver_login";
option java_generic_services = true;
option java_multiple_files = true;

message CMsgClientHello {
	optional uint32 protocol_version = 1;
}